# DuelMesh

./: .gitignore  01 DuelMesh_Codex_Prompt.md  02 DuelMesh_Prompt_Update_Nickname.md  03 DuelMesh_Final_Addendum.md  README.md  pyproject.toml  requirements.txt
.duelmesh/: profile.json
.duelmesh/alice/: profile.json
.duelmesh/alice-ble/: profile.json
.duelmesh/bob/: profile.json
.duelmesh/bob-ble/: profile.json
.duelmesh/liu_kang/: profile.json
.duelmesh/mockmesh/: bus.jsonl
.duelmesh/noakmilo/: profile.json
.duelmesh/player1/: profile.json
.duelmesh/player2/: profile.json
.duelmesh/scorpion/: profile.json
duelmesh/: __init__.py  transport.py
duelmesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ascii_ui.py  test_cli_flow.py  test_commit_reveal.py  test_game.py  test_lobby.py  test_protocol.py  test_transport_mock.py
